--- a/style.css
+++ b/style.css
@@ -50,9 +50,20 @@ body {
 .container small {
     color: var(--secondaryVar);
 }
+.container > div {
+    max-width: 100%;
+}
+.container > .imageShowcaseParent {
+    max-width: 50%;
+}
 
-a, a:hover {
-    text-decoration: none;
+a {
+    text-decoration: underline;
+    color: var(--secondary);
+}
+
+a:hover {
+    color: var(--accent);
 }
 
 .footer {
@@ -70,6 +81,7 @@ a, a:hover {
 
 .footer a {
     color: var(--secondary);
+    text-decoration: none;
 }
 .footer a:hover {
     color: var(--accent);
@@ -134,6 +146,7 @@ a, a:hover {
 }
 .navbar a {
     color: var(--secondary);
+    text-decoration: none;
 }
 .navbar a:hover {
     color: var(--accent);
@@ -178,6 +191,7 @@ a, a:hover {
 
 h1 {
     color: var(--accent);
+    margin-top: 2rem !important;
 }
 
 .gamebox {
@@ -187,6 +201,10 @@ h1 {
     flex-direction: column;
     height: 100vh;
     overflow-y: scroll;
+    overflow-x: hidden;
+    width: 50vw;
+    border-bottom: dashed var(--secondaryVar);
+    border-radius: 25px;
 }
 .gamebox > * {
     margin: 10px;
@@ -195,6 +213,8 @@ h1 {
 .game a:hover > h2{
     color: var(--accent);
 }
+
+
 .game {
     background-color: var(--primaryVar);
     border-radius: 35px;
@@ -204,16 +224,19 @@ h1 {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    width: auto;
 }
-
+.game > * {
+    margin: 0.25rem;
+    width: 100%;
+}
 .game a {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-}
-.game a > * {
-    margin: 0.25rem;
+    overflow: hidden;
+    text-decoration: none;
 }
 .game > *:not(:last-child) {
     margin-bottom: 1rem;
@@ -235,22 +258,78 @@ h1 {
 
 .game iframe {
     background-color: var(--primary);
-    width: 100%;
-    aspect-ratio: 56.25%;
+    height: 360px;
     border-radius: 25px;
 }
 
 .game ul {
     color: var(--secondary);
+    width: auto;
 }
 .game ul li {
     max-width: 65ch;
 }
 
 .imageShowcase {
+    background-color: var(--primary);
+    border-radius: 25px;
+    overflow: auto;
+    overflow-x: scroll;
+    white-space: nowrap;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    min-width: 0;
+    width: inherit;
+}
+
+.imageShowcase img{
+    padding: 10px;
+    object-fit: fill;
+}
+
+.videoShowcase {
+    box-shadow: inset var(--primaryVar) 0 0 10px;
+    border-radius: 25px;
+    overflow: auto;
+    overflow-x: scroll;
+    white-space: nowrap;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    min-width: 0;
+    width: inherit;
+    background-color: var(--primary);
+}
+
+.videoShowcase iframe {
+    aspect-ratio: 16/9;
+    border-radius: 25px;
+    height: 480px;
+    margin: 10px;
+}
+
+.tosul li {
+    margin: 10px;
+    max-width: 50vw;
+}
+.tosul li b :not(.tosul li small b) {
+    font-size: 1.25rem;
+}
+
+.memeVideo {
+    height: 200px;
+}
+.memeVideo iframe {
+    height: 200px;
+}
+.sussyText {
+    padding-right: 10px;
+}
+.sussyText p {
+    color: var(--accent);
+    text-align: right;
     width: 100%;
-    display: block !important;
-    overflow-x: hidden;
 }
 
 @media screen and (max-width: 800px) {
